--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [16.x]
 
     steps:
       - uses: actions/checkout@v3
@@ -30,10 +30,10 @@ jobs:
     - name: ssh into machine, clone repo
       uses: appleboy/ssh-action@master
       with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        port: ${{ secrets.PORT }}
+        host: deployment-wbd.northcentralus.cloudapp.azure.com
+        username: deployment
+        password: Deployment_12345
+        port: 22
         script: |
                 cd code/Kickstart-Final
                 git pull origin main
